--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,6 @@ inputs:
     required: true
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: 'pronto-action/pronto-action@master'
   args:
     - ${{ inputs.github_token }}
