We can't use a docker image because we can't pull it afterwards (:goldenlul: GitHub?)
https://github.community/t5/GitHub-Actions/docker-pull-from-public-GitHub-Package-Registry-fail-with-quot/td-p/32782

--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,6 @@ inputs:
     required: true
 runs:
   using: 'docker'
-  image: 'docker://docker.pkg.github.com/wtag/pronto-action/pronto-action:latest'
+  image: 'Dockerfile'
   args:
     - ${{ inputs.github_token }}
